--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "typings": "dist/datetimepicker.module.d.ts",
   "scripts": {
     "pretest": "npm run build",
-    "build": "del /f dist && tsc",
+    "build": "(del /f dist || rm -rf dist) && tsc",
     "prepublish": "npm run build"
   },
   "author": "Michał Siatkowski",
@@ -31,17 +31,18 @@
     "zone.js": "^0.7.2"
   },
   "dependencies": {
-    "@angular/common": "^2.4.4",
-    "@angular/compiler": "^2.4.4",
-    "@angular/core": "^2.4.4",
-    "@angular/platform-browser": "^2.4.4",
-    "@angular/platform-browser-dynamic": "^2.4.4",
-    "bootstrap": "~3.3.6",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "bootstrap": "^3.3",
     "eonasdan-bootstrap-datetimepicker": ">=4.17.22 <5.0.0",
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.22",
     "@types/jquery": "^2.0.33",
-    "moment": "~2.15.0",
-    "jquery": "~2.2.3",
+    "moment": "^2.10",
+    "moment-timezone": "^0.4.0",
+    "jquery": "^1.8.3 || ^2.0",
     "rxjs":"^5.0.1"
   }
 }
