--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "typings": "dist/datetimepicker.module.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "(del /f dist || rm -rf dist) && tsc"
+    "build": "rimraf dist && tsc"
   },
   "author": "Michał Siatkowski",
   "repository": {
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/core-js": "^0.9.36",
+    "rimraf": "^2.6.1",
     "ts-loader": "^2.0.1",
     "typescript": "^2.1.6",
     "zone.js": ">=0.7.2"
