--- a/package.json
+++ b/package.json
@@ -28,14 +28,11 @@
     "rimraf": "^2.6.1",
     "ts-loader": "^2.0.1",
     "typescript": "^2.1.6",
-    "zone.js": ">=0.7.2"
-  },
-  "dependencies": {
-    "@angular/common": ">=2.0.0",
-    "@angular/compiler": ">=2.0.0",
-    "@angular/core": ">=2.0.0",
-    "@angular/platform-browser": ">=2.0.0",
-    "@angular/platform-browser-dynamic": ">=2.0.0",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
     "bootstrap": "^3.3",
     "eonasdan-bootstrap-datetimepicker": ">=4.17.22 <5.0.0",
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.22",
@@ -43,6 +40,13 @@
     "moment": "^2.10",
     "moment-timezone": "^0.4.0",
     "jquery": "^1.8.3 || ^2.0",
-    "rxjs": "^5.0.1"
+    "rxjs": "^5.0.3",
+    "zone.js": ">=0.8.5"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "@angular/common": ">=2.3.0",
+    "@angular/compiler": ">=2.3.0",
+    "@angular/core": ">=2.3.0"
   }
 }
