--- a/package.json
+++ b/package.json
@@ -43,10 +43,17 @@
     "rxjs": "^5.0.3",
     "zone.js": ">=0.8.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^3.3",
+    "eonasdan-bootstrap-datetimepicker": ">=4.17.22 <5.0.0",
+    "@types/eonasdan-bootstrap-datetimepicker": "^4.17.22",
+    "@types/jquery": "^2.0.33",
+    "moment": "^2.10",
+    "moment-timezone": "^0.4.0",
+    "jquery": "^1.8.3 || ^2.0"
+  },
   "peerDependencies": {
     "@angular/common": ">=2.3.0",
-    "@angular/compiler": ">=2.3.0",
     "@angular/core": ">=2.3.0"
   }
 }
