--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "@angular/platform-browser-dynamic": "4.0.2",
     "rxjs": "^5.0.3",
     "zone.js": ">=0.8.5",
-    "@types/eonasdan-bootstrap-datetimepicker": "^4.17.22",
-    "@types/jquery": "^2.0.33"
+    "@types/eonasdan-bootstrap-datetimepicker": "^4.17.22"
   },
   "dependencies": {
     "bootstrap": "^3.3",
     "eonasdan-bootstrap-datetimepicker": ">=4.17.22 <5.0.0",
     "moment": "^2.10",
     "moment-timezone": "^0.4.0",
-    "jquery": "^1.8.3 || ^2.0"
+    "jquery": "^1.8.3 || ^2.0",
+    "@types/jquery": "^2.0.33"
   },
   "peerDependencies": {
     "@angular/common": ">=2.0.0",
