--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler": "4.0.2",
     "@angular/compiler-cli": "^4.0.2",
     "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
     "@types/core-js": "^0.9.36",
