--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ng": "./node_modules/.bin/ng",
     "start": "./node_modules/.bin/ng serve",
     "webpack:start": "webpack-dev-server --inline --progress --port 8080",
-    "test": "./node_modules/.bin/ng test",
+    "test": "./node_modules/.bin/ng test --watch=false",
     "prepare": "npm run build",
     "ngc": "./node_modules/.bin/ngc -p tsconfig.json",
     "build": "rimraf dist && ngc"
