--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
+    "ng": "./node_modules/.bin/ng",
+    "start": "./node_modules/.bin/ng serve",
+    "webpack:start": "webpack-dev-server --inline --progress --port 8080",
+    "test": "./node_modules/.bin/ng test --watch=false",
     "prepare": "npm run build",
     "ngc": "./node_modules/.bin/ngc -p tsconfig.json",
     "build": "rimraf dist && ngc"
@@ -27,19 +31,50 @@
     "url": "https://github.com/atais/ng2-eonasdan-datetimepicker.git"
   },
   "devDependencies": {
+    "@angular/cli": "1.6.6",
     "@angular/common": "4.0.2",
     "@angular/compiler": "4.0.2",
-    "@angular/compiler-cli": "^4.0.2",
+    "@angular/compiler-cli": "4.0.2",
     "@angular/core": "4.0.2",
     "@angular/forms": "4.0.2",
+    "@angular/language-service": "^4.0.0",
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
     "@types/core-js": "^0.9.36",
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.22",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^3.0.4",
+    "codelyzer": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.16.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "null-loader": "^0.1.1",
+    "protractor": "~5.1.2",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "rxjs": "^5.0.3",
+    "style-loader": "^0.13.1",
     "ts-loader": "^2.0.1",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
     "typescript": "^2.1.6",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-merge": "^3.0.0",
     "zone.js": ">=0.8.5"
   },
   "dependencies": {
