--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - ./node_modules/.bin/ng build --prod --no-aot --base-href=/ng2-eonasdan-datetimepicker/
 
 after_success:
-  - ./node_modules/.bin/ngh --dir dist --repo=https://GH_TOKEN@github.com/atais/ng2-eonasdan-datetimepicker.git
+  - ./node_modules/.bin/ngh --dir demo/dist --repo=https://GH_TOKEN@github.com/atais/ng2-eonasdan-datetimepicker.git
