--- a/package.json
+++ b/package.json
@@ -23,9 +23,17 @@
     "test": "./node_modules/.bin/ng test --watch=false",
     "prepare": "npm run build",
     "ngc": "./node_modules/.bin/ngc -p tsconfig.json",
-    "build": "rimraf dist && ngc"
+    "build": "rimraf dist && ngc",
+    "gh-pages": "./node_modules/.bin/ng build --prod --no-aot --base-href=\"/ng2-eonasdan-datetimepicker/\" && ngh --dir demo/dist"
   },
   "author": "Michał Siatkowski",
+  "contributors": [
+    {
+      "name" : "Fetrarijaona R.",
+      "email" : "fetrarij@gmail.com",
+      "url" : "https://fetrarij.men/"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/atais/ng2-eonasdan-datetimepicker.git"
@@ -45,6 +53,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "angular-cli-ghpages": "^0.5.2",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
     "codelyzer": "^4.0.1",
@@ -55,13 +64,13 @@
     "html-webpack-plugin": "^2.16.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.1",
     "null-loader": "^0.1.1",
     "protractor": "~5.1.2",
     "raw-loader": "^0.5.1",
